Starting with jQuery

--- a/thermostat.html
+++ b/thermostat.html
@@ -9,6 +9,7 @@
   <meta name='author' content='TiBaNi'>
 
   <link rel='stylesheet' href='css/styles.css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
   <body>
@@ -33,19 +34,11 @@
         <input type='checkbox' checked>
         <div class='slider round'></div>
       </label>
-
-
-
-
-
-
-
-
-
-
-
-
-    <!-- Where our JS will go :) -->
+      <!-- <script src="jquery.js"></script> -->
+      <script type='text/javascript' src='src/Thermostat.js'></script>
+      <script>
+        
+      </script>
     </div>
   </body>
 </html>
