--- a/thermostat.html
+++ b/thermostat.html
@@ -1,26 +1,26 @@
 <!doctype html>
 
 <html lang='en'>
-<head>
-  <meta charset='utf-8'>
+  <head>
+    <meta charset='utf-8'>
 
-  <title>Thermostat</title>
-  <meta name='description' content='An amazing thermostat'>
-  <meta name='author' content='TiBaNi'>
+    <title>Thermostat</title>
+    <meta name='description' content='An amazing thermostat'>
+    <meta name='author' content='TiBaNi'>
 
-  <link rel='stylesheet' href='public/css/styles.css'>
-  <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-</head>
+    <link rel='stylesheet' href='public/css/styles.css'>
+    <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  </head>
 
   <body>
     <div class='left-side'>
       <div class='grey-background'>
-      <div class="cities" align="center">
-         <input type="text" name="cityWeather" class="input-weather"> <br />
-         <input type="button" value="Weather" class='button weather-btn'>
-       </div>
+        <div class="cities" align="center">
+          <input type="text" name="cityWeather" class="input-weather"> <br />
+          <input type="button" value="Weather" class='button weather-btn'>
+        </div>
 
       <div class='city-display'>
          <h2 class="city"></h2>
@@ -31,111 +31,41 @@
      </div>
     </div>
     <div class='right-side'>
-    <div class='container'>
-      <div id='thermostat'>
-        <div id='display-container'>
-          <div id='thermo-container'>
-            <img id='thermo-lines' src="public/images/thermo-lines.png">
-            <div id='thermo-box'>
-              <div id='thermometer'>
-
+      <div class='container'>
+        <div id='thermostat'>
+          <div id='display-container'>
+            <div id='thermo-container'>
+              <img id='thermo-lines' src="public/images/thermo-lines.png">
+              <div id='thermo-box'>
+                <div id='thermometer'></div>
               </div>
             </div>
-          </div>
           <div id='thermo-bottom'></div>
-          <h2 id='temperature'><span id='temp'></span>&deg;c</h2>
-          <h3 id='usage'></h3>
-          <p id='psm-status'>PSM: ON</p>
+            <h2 id='temperature'><span id='temp'></span>&deg;c</h2>
+            <h3 id='usage'></h3>
+            <p id='psm-status'>PSM: ON</p>
+          </div>
+          <label>
+            <button class='button' id='increase'>+</button>
+          </label>
+          <label>
+            <button class='button' id='decrease'>-</button>
+          </label>
+          <label>
+            <button class='button' id='reset'>RESET</button>
+          </label>
+          <br />
+
+          <p class='power'><span class='psm-title'>Power Saving:</span></p>
+          <label class='switch'>
+            <input id='togglePSM' type='checkbox' checked>
+            <div class='slider round'></div>
+          </label>
         </div>
-        <label>
-          <button class='button' id='increase'>+</button>
-        </label>
-        <label>
-          <button class='button' id='decrease'>-</button>
-        </label>
-        <label>
-          <button class='button' id='reset'>RESET</button>
-        </label>
-        <br />
-
-        <p class='power'><span class='psm-title'>Power Saving:</span></p>
-        <label class='switch'>
-          <input id='togglePSM' type='checkbox' checked>
-          <div class='slider round'></div>
-        </label>
+        <h1>Thermostat</h1>
       </div>
-      <h1>Thermostat</h1>
     </div>
-  </div>
-  <!-- <script src="jquery.js"></script> -->
-  <script type='text/javascript' src='src/Thermostat.js'></script>
-  <script type='text/javascript'>
-    var thermostat = new Thermostat();
-    displayUpdate();
-
-    $('#increase').on('click', function() {
-      thermostat.increase();
-      displayUpdate();
-    });
-
-    $('#decrease').on('click', function() {
-      thermostat.decrease();
-      displayUpdate();
-    });
-
-    $('#reset').on('click', function() {
-      thermostat.reset();
-      displayUpdate();
-    });
-
-    $('#togglePSM').on('click', function() {
-      thermostat.togglePowerSaving();
-      psmUpdate();
-      displayUpdate();
-    });
-
-    $('.weather-btn').on('click', function() {
-      if ($(".input-weather").val() != "" ) { $(".city-display").show() };
-       $.getJSON("http://api.openweathermap.org/data/2.5/weather?q=" + $(".input-weather").val() + "&APPID=5b09bcf52074c70d63d02d2f8e3f9557", function(json) {
-       $(".city").text(json.name);
-       $(".temperature").text((json.main.temp - 273.15).toFixed(0));
-       $(".temp_min").text((json.main.temp_min - 273.15).toFixed(0));
-       $(".temp_max").text((json.main.temp_max - 273.15).toFixed(0));
-     });
-    });
-
-    function psmUpdate() {
-      if (thermostat.maxTemperature === 32) {
-        $('#psm-status').text('PSM: OFF').css('color', 'crimson');
-      } else {
-        $('#psm-status').text('PSM: ON').css('color', 'darkblue');
-      };
-    };
-
-    function displayUpdate() {
-      $('#temp').text(thermostat.temperature);
-      $('#usage').text(thermostat.energyUsage());
-      colorUpdate();
-      var temp = (100 - Math.floor(100 * (thermostat.temperature - thermostat.minTemperature) / (32 - thermostat.minTemperature))) + '%';
-      $('#thermometer').animate({height: temp});
-    };
-
-    function colorUpdate() {
-      if (thermostat.temperature < 13) {
-        $('#thermo-box, #thermo-bottom').css('backgroundColor', '#ffcc66');
-      } else if (thermostat.temperature < 18) {
-        $('#thermo-box, #thermo-bottom').css('backgroundColor', '#ffcc66');
-        $('#usage').css('color', 'green');
-      } else if (thermostat.temperature < 25) {
-        $('#thermo-box, #thermo-bottom').css('backgroundColor', '#ff9933');
-        $('#usage').css('color', 'darkblue');
-      } else if (thermostat.temperature < 30) {
-        $('#thermo-box, #thermo-bottom').css('backgroundColor', '#ff3300');
-        $('#usage').css('color', 'crimson');
-      } else {
-        $('#thermo-box, #thermo-bottom').css('backgroundColor', '#ff0000');
-      };
-    };
-  </script>
+    <script type='text/javascript' src='src/Thermostat.js'></script>
+    <script type='text/javascript' src='src/Controller.js'></script>
   </body>
 </html>
